<resources>
    <string name="app_name">RetreatApplication</string>

    //Welcome Screen Strings
    <string name="welcome">Welcome to the Slalom T Party!</string>
    <string name="next_button">Next</string>
    <string name="first_load">Yes</string>

    //Create User Strings
    <string name="createUserLabel">Create User</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_user">Create User</string>

    //Main Activity View Strings
    <string name="title_activity_retreat_app_main_view">Slalom</string>
    <string name="countdown_title_label">Countdown</string>
    <string name="countdown_timer_label">Timer</string>
    <string name="top_secret_label">Top Secret</string>
    <string name="information_button">INFO</string>
    <string name="agenda_button">AGENDA</string>
    <string name="activities_button">Activities</string>
    <string name="trending_button">Trending</string>

    //Info Page Strings
    <string name="title_activity_information">Information Activity</string>
    <string name="information">Retreat Information</string>
    <string name="address">310 Mount Washington Hotel Rd \nBretton Woods, NH 03575</string>
    <string name="phone_number">603-278-1000</string>

    //Trending Page Strings
    <string name="trending">Trending</string>
    <string name="title_activity_location_feed">Location Feed</string>
    <string name="title_activity_trending">Trending Now</string>
    <string name="refresh">Refresh</string>

    //Game View Strings
    <string name="title_activity_game_view">GameViewActivity</string>
<<<<<<< HEAD
    <string name="find_someone_who">Find someone who...</string>
=======
    <string name="find_someone_who">Find Some Who...</string>
    <string name="ok">Got it!</string>
    <string name="instructions">Hey Guys &amp; Dolls! \n\nWant to be the Bees Knees at TParty 2015?!  I know a lot of things are hush-hush around here during prohibition, but strike up a conversation with fellow Speakeasy goers and learn a thing or two about the other Slalomites!  All you have to do is mosey around this joint, find someone who fits the description on the card, and enter in his/her first name into the space provided.  Once you have completed all 12 cards, the status bar on the top of your screen will turn green.  Make sure to show your phone at the door to the Presidential Foyer at the Saturday night hop and win two extra raffle tickets (only raffle tickets – no dough!).  Now what are you waiting for? Scram beat it!</string>
>>>>>>> ccd3521c968531f1a63d8d68684a5280dc5c3e94

    //Agenda Activity Strings
    <string name="title_activity_agenda">Agenda</string>

    //Location Page Strings
    <string name="omni_placeholder">Omni Resort Mount Washington</string>
    <string name="check_in_button">TAP TO CHECK-IN!</string>
    <string name="checked_in_post_button">Checked-in, write something ...</string>

    //Checked In Users Page Strings
    <string name="check_ins">Check-Ins</string>
    <string name="current_checked_in">Currently Checked-In</string>
    <string name="title_activity_checked_in_users">Check-ins</string>

    //Create Post View Strings
    <string name="post_button_text">Post</string>

</resources>
